# mergebamsR

./: .gitignore  404.html  CNAME  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  debug.R  index.html  index.md  mergebamsR.Rproj  pkgdown.yml  search.json  sitemap.xml
.Rproj.user/B7396782/: cpp-definition-cache  persistent-state
.Rproj.user/B7396782/compilation-database/: config.json
.Rproj.user/B7396782/pcs/: files-pane.pper
.Rproj.user/B7396782/sources/prop/: 31FC6784  65882702  AB7891C2  BBA69138  C0B964D3  INDEX
.Rproj.user/B7396782/sources/session-2f6a3e33/: 0010E9CA  2EA25310-contents  49F6C991-contents  61CC2801  61CC2801-contents  711BE9ED  72188A4D-contents  9240D4AD-contents  (+5 more)
.Rproj.user/shared/notebooks/: paths
R/: extendr-wrappers.R  mergebamsR.R
articles/: HowTo.html  index.html
docs/: 404.html  LICENSE.html  authors.html  index.html  pkgdown.yml
inst/extdata/test/: bam1.bam.bai  bam2.bam.bai  bam3.bam.bai  bam4.bam  bam4.bam.bai
man/: mergebams.Rd  mergebamsR-package.Rd  mergebams_rust_helper.Rd  peekbam.Rd  peekbam_rust_helper.Rd  subsetbam.Rd  subsetbam_rust_helper.Rd
news/: index.html
pkgdown/: mergebamsR.ai  runAll.R
reference/: index.html  mergebams.html  mergebamsR-package.html  mergebams_rust_helper.html  peekbam.html  peekbam_rust_helper.html  subsetbam.html  subsetbam_rust_helper.html
src/: Makevars  Makevars.win  entrypoint.c  mergebamsR-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs  mergebamsR.rs  subsetbam.rs  utils.rs
test/: bam2.bam  bam3.bam
vignettes/: HowTo.Rmd
(+1 files in other folders)
