[package]
name = 'mergebamsR'
publish = false
version = '0.0.1'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'mergebamsR'

[dependencies]
extendr-api = "0.6"
extendr-macros = "0.6"
bam = "0.1.4"
bytes = "1.1.0"
simple-log = "1.5.1"
toml = "0.5.7"
serde_derive = "1.0.140"
serde = "1.0.147"
csv = "1.1.6"
flate2 = "1.0.24"
itertools = "0.10.5"
differ = { git = "https://github.com/scfurl/differ" }
rust-htslib = "0.46"
failure = "*"
clap = "*"
terminal_size = "*"
human-panic = "1.0.1"
simplelog = "0.5.0"
log = "*"
tempfile = "*"
rayon = "*"
ring = "0.14.6"
data-encoding = "*"
faccess="0.2.4"

